# ada

./: .gitignore  README.md  docker-compose.yml
back/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
back/app/: config.py  db.py  main.py
back/app/api/: dependencies.py  uploads.py
back/app/api/routers/: auth.py  cases.py  metrics.py  prompt_versions.py  tipos_documento.py  users.py
back/app/domain/: cross_validation.py  decision.py  dni.py  extraction.py
back/app/models/: __init__.py  caso.py  decision.py  documento.py  prompt_version.py  tipo_documento.py  usuario.py
back/app/repositories/: caso_repo.py  decision_repo.py  documento_repo.py  prompt_version_repo.py  tipo_documento_repo.py  usuario_repo.py
back/app/schemas/: auth.py  caso.py  decision.py  documento.py  extraction.py  metrics.py  prompt_version.py  simulation.py  tipo_documento.py  usuario.py
back/app/services/: auth_service.py  caso_service.py  decision_aggregator.py  metrics_service.py  normalization.py  prompt_version_service.py  simulation_service.py  tipo_documento_service.py  usuario_service.py
back/app/services/cross_validation/: comparators.py  engine.py  (+1 more)
back/app/storage/: filesystem.py
back/tests/: conftest.py  test_api_auth.py  test_api_cases.py  test_api_metrics.py  test_api_prompt_versions.py  test_api_review.py  test_api_simulate.py  test_api_tipos_documento.py  test_api_users.py  test_cross_validation_comparators.py  test_cross_validation_engine.py  test_cross_validation_normalizers.py  test_decision_aggregator.py  test_dni_rules.py
(+98 files in other folders)
